--- a/requirements.txt
+++ b/requirements.txt
@@ -4,4 +4,6 @@ Flask==2.3.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mysql-connector-python==8.1.0
+protobuf==4.21.12
 Werkzeug==2.3.6
