--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+mysql-connector==2.2.9
 mysql-connector-python==8.1.0
 protobuf==4.21.12
 PyMySQL==1.1.0
